--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "geniusts/hijri-dates": "^1.1",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/helpers": "^1.2",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
