--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,13 +1,11 @@
-php:
-  preset: laravel
-  disabled:
-    - unused_use
-  finder:
-    not-name:
-      - index.php
-      - server.php
-js:
-  finder:
-    not-name:
-      - webpack.mix.js
-css: true
+preset: laravel
+enabled:
+  - no_superfluous_phpdoc_tags
+  - declare_strict_types
+  - length_ordered_imports
+disabled:
+  - alpha_ordered_imports
+finder:
+  not-name:
+    - index.php
+    - server.php
